# workshop_dw_etl

./: pyproject.toml
backend/: start.py
backend/contracts/: schema.py  transactions.py
backend/datasource/: api.py  postgre.py
backend/fakeapi/: products.csv  start.py
backend/tools/aws/: client.py
backend/tools/sql/db/: database_connection.py  transactions_model.py
faker/: data_saver.py  database_setup.py  db_connection.py  drop_table.py  logging_utils.py  pipeline.py  query_db.py  retail_sales.py
frontend/: main.py
frontend/contracts/: catalogo.py
frontend/datasource/: csv.py
