[tool.poetry]
name = "dw-workshop3"
version = "0.1.0"
description = "create a data platform end-to-end, with DW, processing and visualization"
authors = ["PedroPauloMR <pedrop.ribeiro@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
faker = "^22.6.0"
pandas = "^2.2.0"
requests = "^2.31.0"
pyarrow = "^15.0.0"
boto3 = "^1.34.34"
python-dotenv = "^1.0.1"
schedule = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
